--- a/VoidEvolve/package.json
+++ b/VoidEvolve/package.json
@@ -54,7 +54,9 @@
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "framer-motion": "^11.13.1",
     "gl-matrix": "^3.4.3",
     "gsap": "^3.12.5",
@@ -97,8 +99,7 @@
     "ws": "^8.18.0",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0",
-    "zustand": "^5.0.3",
-    "express-rate-limit": "^7.5.1"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
